# libvmod-statsd

./: README.rst  configure.ac
src/: Makefile.am  vmod_statsd.c
src/tests/: test01.vtc
