AM_CFLAGS = $(VARNISHAPI_CFLAGS) -Wall -Werror
AM_LDFLAGS = $(VARNISHAPI_LIBS) $(VMOD_LDFLAGS)

vmod_LTLIBRARIES = libvmod_statsd.la

libvmod_statsd_la_SOURCES = \
	vmod_statsd.c

nodist_libvmod_statsd_la_SOURCES = \
	vcc_statsd_if.c \
	vcc_statsd_if.h

dist_man_MANS = vmod_statsd.3

@BUILD_VMOD_STATSD@

AM_TESTS_ENVIRONMENT = \
	PATH="$(VMOD_TEST_PATH)" \
	LD_LIBRARY_PATH="$(VARNISH_LIBRARY_PATH)"
TEST_EXTENSIONS = .vtc
VTC_LOG_COMPILER = varnishtest -v
AM_VTC_LOG_FLAGS = -Dvmod_statsd="$(VMOD_STATSD)"

TESTS = @VMOD_TESTS@

EXTRA_DIST = \
	vmod_statsd.vcc \
	$(VMOD_TESTS)
